Cards/DMC5480/Code/VC6.0/DMC5480.h

typedef unsigned short      WORD;
typedef unsigned long		DWORD;
DMC5480_API DWORD __stdcall d5480_write_outbit(WORD cardno, WORD bitno,WORD on_off);
DMC5480_API int __stdcall  d5480_read_outbit(WORD cardno, WORD bitno) ;
DMC5480_API long __stdcall d5480_read_inport(WORD cardno);
DMC5480_API long __stdcall d5480_read_outport(WORD cardno) ;
DMC5480_API DWORD __stdcall d5480_write_outport(WORD cardno, DWORD port_value);
//制动函数
DMC5480_API DWORD __stdcall d5480_decel_stop(WORD axis,double dec);
DMC5480_API DWORD __stdcall d5480_imd_stop(WORD axis);
DMC5480_API DWORD __stdcall d5480_emg_stop(void) ;
DMC5480_API DWORD __stdcall d5480_simultaneous_stop(WORD axis) ;
//位置设置和读取函数
DMC5480_API long __stdcall d5480_get_position(WORD axis);
DMC5480_API DWORD __stdcall d5480_set_position(WORD axis,long current_position);
//状态检测函数
DMC5480_API int __stdcall  d5480_check_done(WORD axis) ;
DMC5480_API DWORD __stdcall d5480_axis_io_status(WORD axis);
//速度设置
DMC5480_API double __stdcall d5480_read_current_speed(WORD axis);
DMC5480_API double __stdcall d5480_read_vector_speed(WORD card);
DMC5480_API DWORD __stdcall d5480_change_speed(WORD axis,double Curr_Vel);
DMC5480_API DWORD __stdcall d5480_set_vector_profile(WORD cardno,double s_para, double Max_Vel, double acc,double dec );
DMC5480_API DWORD __stdcall d5480_get_vector_profile(WORD cardno,double* s_para, double* Max_Vel, double* acc,double* dec );
DMC5480_API DWORD __stdcall d5480_set_profile(WORD axis,double option,double Max_Vel,double acc,double dec);
DMC5480_API DWORD __stdcall d5480_set_s_profile(WORD axis,double s_para);
DMC5480_API DWORD __stdcall d5480_get_profile(WORD axis,double* option,double* Max_Vel,double* acc,double* dec);
DMC5480_API DWORD __stdcall d5480_get_s_profile(WORD axis,double* s_para);
DMC5480_API DWORD __stdcall d5480_reset_target_position(WORD axis,long dist);
//单轴定长运动
DMC5480_API DWORD __stdcall d5480_pmove(WORD axis,long Dist,WORD posi_mode);
//单轴连续运动
DMC5480_API DWORD __stdcall d5480_vmove(WORD axis,WORD dir, double vel);
//线性插补
DMC5480_API DWORD __stdcall d5480_line2(WORD axis1,long Dist1,WORD axis2,long Dist2,WORD posi_mode);
DMC5480_API DWORD __stdcall d5480_line3(WORD *axis,long Dist1,long Dist2,long Dist3,WORD posi_mode);
DMC5480_API DWORD __stdcall d5480_line4(WORD cardno,long Dist1,long Dist2,long Dist3,long Dist4,WORD posi_mode);
//手轮运动
DMC5480_API DWORD __stdcall d5480_set_handwheel_inmode(WORD axis,WORD inmode, double multi);
DMC5480_API DWORD __stdcall d5480_handwheel_move(WORD axis);
//找原点
DMC5480_API DWORD __stdcall d5480_config_home_mode(WORD axis,WORD home_dir, double vel, WORD mode, WORD EZ_count);
DMC5480_API DWORD __stdcall d5480_home_move(WORD axis);
//圆弧插补
DMC5480_API DWORD __stdcall d5480_arc_move(WORD *axis,long *target_pos,long *cen_pos, WORD arc_dir);
DMC5480_API DWORD __stdcall d5480_rel_arc_move(WORD *axis,long *rel_pos,long *rel_cen, WORD arc_dir);
//设置和读取位置比较信号
DMC5480_API DWORD __stdcall d5480_compare_config(WORD card, WORD enable, WORD axis,  WORD cmp_source);
DMC5480_API DWORD __stdcall d5480_compare_get_config(WORD card, WORD* enable, WORD* axis,  WORD* cmp_source);
DMC5480_API DWORD __stdcall d5480_compare_clear_points(WORD card);
DMC5480_API DWORD __stdcall d5480_compare_add_point(WORD card, long pos, WORD dir,  WORD action, long actpara);
DMC5480_API long __stdcall d5480_compare_get_current_point(WORD card);
DMC5480_API long __stdcall d5480_compare_get_points_runned(WORD card);
DMC5480_API long __stdcall d5480_compare_get_points_remained(WORD card);
//---------------------   编码器计数功能  ----------------------//
DMC5480_API long __stdcall d5480_get_encoder(WORD axis);
DMC5480_API DWORD __stdcall d5480_set_encoder(WORD axis,long encoder_value);
DMC5480_API DWORD __stdcall d5480_config_EZ_PIN(WORD axis,WORD ez_logic, WORD ez_mode);
DMC5480_API DWORD __stdcall d5480_get_config_EZ_PIN(WORD axis,WORD* ez_logic, WORD* ez_mode);
DMC5480_API DWORD __stdcall d5480_config_LTC_PIN(WORD axis,WORD ltc_logic, WORD ltc_mode);
DMC5480_API DWORD __stdcall d5480_config_latch_mode(WORD cardno, WORD all_enable);
DMC5480_API long __stdcall d5480_get_latch_value(WORD axis);