Cards/DMC5480/Code/C#/DMC5480.cs


        [DllImport("DMC5480.dll", EntryPoint = "d5480_write_outbit", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_write_outbit(UInt16 cardno, UInt16 bitno,UInt16 on_off);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_read_outbit", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32   d5480_read_outbit(UInt16 cardno, UInt16 bitno) ;

        [DllImport("DMC5480.dll", EntryPoint = "d5480_read_inport", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_read_inport(UInt16 cardno);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_read_outport", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_read_outport(UInt16 cardno) ;

        [DllImport("DMC5480.dll", EntryPoint = "d5480_write_outport", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_write_outport(UInt16 cardno, UInt32 port_value);

        //Braking function

        [DllImport("DMC5480.dll", EntryPoint = "d5480_decel_stop", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_decel_stop(UInt16 axis,double dec);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_imd_stop", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_imd_stop(UInt16 axis);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_emg_stop", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_emg_stop() ;

        [DllImport("DMC5480.dll", EntryPoint = "d5480_simultaneous_stop", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_simultaneous_stop(UInt16 axis) ;

        //Position setting and reading function

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_position", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_get_position(UInt16 axis);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_set_position", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_set_position(UInt16 axis,Int32 current_position);


        //State detection function

        [DllImport("DMC5480.dll", EntryPoint = "d5480_check_done", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32   d5480_check_done(UInt16 axis) ;

        [DllImport("DMC5480.dll", EntryPoint = "d5480_axis_io_status", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_axis_io_status(UInt16 axis);


        //Speed setting

        [DllImport("DMC5480.dll", EntryPoint = "d5480_read_current_speed", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern double  d5480_read_current_speed(UInt16 axis);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_read_vector_speed", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern double  d5480_read_vector_speed(UInt16 card);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_change_speed", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_change_speed(UInt16 axis,double Curr_Vel);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_set_vector_profile", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_set_vector_profile(UInt16 cardno,double s_para, double Max_Vel, double acc,double dec );

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_vector_profile", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_vector_profile(UInt16 cardno,ref double s_para, ref double Max_Vel, ref double acc,ref double dec );

        [DllImport("DMC5480.dll", EntryPoint = "d5480_set_profile", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_set_profile(UInt16 axis,double option,double Max_Vel,double acc,double dec);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_set_s_profile", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_set_s_profile(UInt16 axis,double s_para);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_profile", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_profile(UInt16 axis,ref double option,ref double Max_Vel,ref double acc,ref double dec);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_s_profile", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_s_profile(UInt16 axis,ref double s_para);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_reset_target_position", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_reset_target_position(UInt16 axis,Int32 dist);

        //Single axis fixed length movement

        [DllImport("DMC5480.dll", EntryPoint = "d5480_pmove", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_pmove(UInt16 axis,Int32 Dist,UInt16 posi_mode);

        //Single axis continuous motion
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_vmove", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_vmove(UInt16 axis,UInt16 dir, double vel);

        //Linear interpolation

        [DllImport("DMC5480.dll", EntryPoint = "d5480_line2", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_line2(UInt16 axis1,Int32 Dist1,UInt16 axis2,Int32 Dist2,UInt16 posi_mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_line3", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_line3(ref UInt16 axis,Int32 Dist1,Int32 Dist2,Int32 Dist3,UInt16 posi_mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_line4", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_line4(UInt16 cardno,Int32 Dist1,Int32 Dist2,Int32 Dist3,Int32 Dist4,UInt16 posi_mode);

        //Handwheel movement

        [DllImport("DMC5480.dll", EntryPoint = "d5480_set_handwheel_inmode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_set_handwheel_inmode(UInt16 axis,UInt16 inmode, double multi);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_handwheel_move", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_handwheel_move(UInt16 axis);

        //Find the origin

        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_home_mode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_home_mode(UInt16 axis,UInt16 home_dir, double vel, UInt16 mode, UInt16 EZ_count);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_home_move", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_home_move(UInt16 axis);

        //Circular interpolation
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_arc_move", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_arc_move(ref UInt16 axis,ref Int32 target_pos,ref Int32 cen_pos, UInt16 arc_dir);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_rel_arc_move", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_rel_arc_move(ref UInt16 axis,ref Int32 rel_pos,ref Int32 rel_cen, UInt16 arc_dir);

        //Set and read position comparison signal

        [DllImport("DMC5480.dll", EntryPoint = "d5480_compare_config", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_compare_config(UInt16 card, UInt16 enable, UInt16 axis,  UInt16 cmp_source);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_compare_get_config", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_compare_get_config(UInt16 card, ref UInt16 enable, ref UInt16 axis,  ref UInt16 cmp_source);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_compare_clear_points", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_compare_clear_points(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_compare_add_point", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_compare_add_point(UInt16 card, Int32 pos, UInt16 dir,  UInt16 action, Int32 actpara);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_compare_get_current_point", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_compare_get_current_point(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_compare_get_points_runned", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_compare_get_points_runned(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_compare_get_points_remained", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_compare_get_points_remained(UInt16 card);


        //---------------------   Encoder counting function  ----------------------//
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_encoder", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_get_encoder(UInt16 axis);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_set_encoder", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_set_encoder(UInt16 axis,Int32 encoder_value);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_EZ_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_EZ_PIN(UInt16 axis,UInt16 ez_logic, UInt16 ez_mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_EZ_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_EZ_PIN(UInt16 axis,ref UInt16 ez_logic, ref UInt16 ez_mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_LTC_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_LTC_PIN(UInt16 axis,UInt16 ltc_logic, UInt16 ltc_mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_latch_mode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_latch_mode(UInt16 cardno, UInt16 all_enable);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_latch_value", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_get_latch_value(UInt16 axis);
